src/snapshots/pg_when__am_pm_time__tests__parse_invalid_second.snap
---
source: src/am_pm_time.rs
expression: err
---
0: at line 1, in Tag:
12:58:60 am
^

1: at line 1, in Alt:
12:58:60 am
^

2: at line 1, in Alt:
12:58:60 am
^
